--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -14,6 +14,7 @@ const { title, path } = Astro.props
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{ title }</title>
+        <link rel="icon" href="/favicon.svg" type="image/svg+xml">
         <style>
             @layer base, component, layout, page;
         </style>
